<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.openclassrooms.firebaseoc.MainActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_auth"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_margin"/>

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/main_activity_description"
            android:layout_margin="@dimen/default_margin"/>

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_large_margin">

            <!-- BUTTON LOGIN -->
            <Button
                android:id="@+id/main_activity_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_primary_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"/>

            <!-- BUTTON CHAT -->
            <Button
                android:id="@+id/main_activity_button_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat_with_mentor"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/button_radius_accent_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"/>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
