<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.openclassrooms.firebaseoc.mentor_chat.MentorChatActivity">

    <!-- BUTTONS CHAT CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- BUTTON CHAT ANDROID -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_android_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:src="@drawable/ic_android_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="10"/>

        <!-- BUTTON CHAT FIREBASE -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_firebase_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSandLight"
            android:src="@drawable/ic_cloud_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="20"/>

        <!-- BUTTON CHAT BUG -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_bug_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSand"
            android:src="@drawable/ic_bug_report_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="30"/>

    </LinearLayout>


    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/activity_mentor_chat_add_message_container"
        android:layout_below="@id/activity_mentor_chat_buttons_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/activity_mentor_chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_mentor_chat_error"
            android:textAlignment="center"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- RECYCLER VIEW -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_mentor_chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/activity_mentor_chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="@dimen/default_margin"
        android:layout_above="@id/activity_mentor_chat_add_message_container"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/activity_mentor_chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/activity_mentor_chat_add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_circle_black_24px"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <!-- TEXT MESSAGE EDIT TEXT -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_mentor_chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            android:hint="@string/text_input_title_mentor_chat_activity"/>

        <!-- ADD MESSAGE BUTTON -->
        <Button
            android:id="@+id/activity_mentor_chat_send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_mentor_chat_activity" />

    </LinearLayout>

</RelativeLayout>